@@ -4,6 +4,10 @@
 
 	* src/getcolor.c: Conditionally remove unused prototype during 
 	compilation of gnuplot_x11.
+
+	* src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots)
+	src/set.c (set_tic_prop): Continue replacement of isstring +
+	m_quote_capture with try_to_get_string().
 	
 2004-08-08  Ethan Merritt  <merritt@u.washington.edu>
 
